# VideoDownloaderPro

./: .gitignore  README.md  diff.txt  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
docs/: 01_project_overview.md  02_technical_architecture.md  03_database_schema.md  04_development_roadmap.md  05_download_queue.md  06_error_handling.md  07_ipc_api_contract.md  09_queue_system.md  (+2 more)
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: constants.rs  db.rs  lib.rs  main.rs  platform.rs
src-tauri/src/auth/: api.rs  cookie_manager.rs  cookie_tests.rs  encryption.rs  extractor.rs  mod.rs
src-tauri/src/background/: mod.rs  trash_cleaner.rs
src-tauri/src/commands/: auth.rs  download.rs  mod.rs  settings.rs  sidecar.rs  sources.rs  wall.rs
src-tauri/src/download/: cancel_test.rs  mod.rs  parser.rs  post_process.rs  worker.rs
src-tauri/src/entity/: creator.rs  download_task.rs  media.rs  mod.rs  platform.rs  platform_session.rs  post.rs  setting.rs  source.rs
src-tauri/src/metadata/: fetcher.rs  format_processor.rs  mod.rs  models.rs  store.rs  tests.rs
src-tauri/src/metadata/tiktok/: fetcher.rs  helpers.rs  mod.rs  models.rs
src-tauri/src/migration/: m20260217_000001_initial_schema.rs  m20260217_000002_add_download_stats.rs  m20260219_000001_add_username_to_sessions.rs  m20260224_000001_add_avatar_and_error_to_sessions.rs  mod.rs
src-tauri/src/queue/: manager.rs  mod.rs
src-tauri/src/sidecar/: mod.rs  types.rs
src-tauri/tests/: auth_test.rs  cancellation_check.rs  db_test.rs
(+81 files in other folders)
