[package]
name = "video-downloader-pro"
version = "0.1.0"
description = "A professional desktop app for downloading and collecting video content"
authors = ["you"]
edition = "2021"

[lib]
name = "video_downloader_pro_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"
sea-orm = { version = "1", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = { version = "1", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
regex = "1.12.3"
tokio-util = { version = "0.7", features = ["rt"] }
once_cell = "1"
